--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Chiron+GoRound+TC:wght@200..900&display=swap" rel="stylesheet">
 
         <!--自製CSS-->
-        <link rel="stylesheet" href="ddyl.css">
+        <link rel="stylesheet" href="index.css">
 
     </head>
 
@@ -78,3 +78,4 @@
     </footer>
     </body>
 </html>
+
