--- a/news.html
+++ b/news.html
@@ -64,6 +64,20 @@
             </p>
             <span class="hightlight">為了感謝大家的支持，2034/2/8起~3/8止，凡是在本店用餐打卡皆享有8折優惠。</span>
         </article>
+        <aside class="sidebar">
+            <h3 class="heading-medium font-zh-tw">分類</h3>
+            <ul class="side-menu">
+                <li><a href="#">本店介紹</a></li>
+                <li><a href="#">期間限定菜單</a></li>
+                <li><a href="#">活動</a></li>
+                <li><a href="#">顧客反饋</a></li>
+            </ul>
+
+            <h3 class="heading-medium font-zh-tw">歷年紀錄</h3>
+            <ul class="side-menu">
+                <li><a href="#">2034年</a></li>
+            </ul>
+        </aside>
     </main>
     
     
