--- a/news.html
+++ b/news.html
@@ -78,6 +78,9 @@
                 <li><a href="#">2034年</a></li>
             </ul>
         </aside>
+        <aside class="ad">
+            <img src="ad1.png" alt="芒果祭期間限定">
+        </aside>
     </main>
     
     
