--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <ul class="main-nav font-zh-tw">
                     <li><a href="news.html">最新消息</a></li>
                     <li><a href="menu.html">菜單</a></li>
-                    <li><a href="#contact">聯絡我們</a></li>
+                    <li><a href="contact.html">店家資訊</a></li>
 
                 </ul>
             </nav>
@@ -52,8 +52,8 @@
         </div>
 
     </section>
-    <footer id="contact" class="page-footer">
-        <h3 class="heading-large font-zh-tw">聯絡我們</h3>
+    <footer class="page-footer">
+        <h3 class="heading-large font-zh-tw">店家資訊</h3>
         <table class="info">
             <tr>
                 <th>地址:</th>
