--- a/news.html
+++ b/news.html
@@ -9,6 +9,13 @@
         <!--Favicon-->
         <link rel="icon" type="image/png" href="favicon2.png">
 
+        <!--OGP-->
+        <meta property="og:url" content="https://chen-yunglung.github.io/yongji-shokudo/contact.html">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="永記食堂-最新消息">
+        <meta property="og:description" content="台日夫妻以台灣在地食材製作出美味的日本小吃">
+        <meta property="og:image" content="https://chen-yunglung.github.io/yongji-shokudo/ogp.png">
+
         <!--重置CSS-->
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
 
